<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="wind"
            type="com.example.model.Wind" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#83450808">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/wind"
            android:textColor="#fff"
            android:textSize="22sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/tvTitle"
            android:background="#fff" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/imgFan"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/view"
            android:contentDescription="@null"
            android:src="@drawable/ic_windmill" />

        <LinearLayout
            android:id="@+id/llSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_toEndOf="@+id/imgFan"
            android:layout_toRightOf="@+id/imgFan"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wind_speed"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvWind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{String.valueOf(wind.speed) + `m/s`}"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/dotLine"
            android:layout_width="match_parent"
            android:layout_below="@+id/llSpeed"
            android:layout_height="2dp"
            android:layout_toEndOf="@+id/imgFan"
            android:layout_toRightOf="@+id/imgFan"
            android:background="@drawable/custom_dot_line"
            android:layerType="software"/>

        <LinearLayout
            android:id="@+id/llDegrees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dotLine"
            android:layout_toEndOf="@+id/imgFan"
            android:layout_toRightOf="@+id/imgFan"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wind_degrees"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvDegrees"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{String.valueOf((int)wind.degrees)}"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>


    </RelativeLayout>
</layout>

